--- a/prediction-ui/templates/wine.html
+++ b/prediction-ui/templates/wine.html
@@ -34,7 +34,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        background-image: url("/Users/Mazarinetulp/Documents/html tests/wallpaperwine.png");
+        background-image: url("wallpaper.png");
         background-size: cover;
         opacity: 0.2;
         z-index: -1; /* Places the background behind other elements */
@@ -45,16 +45,19 @@
         font-family: "Merriweather", serif;
         text-align: center;
         font-weight: bold;
-        padding: 1px 0;
-        margin-bottom: 15px;
+        padding: 0.5em 0; /* Reduced padding for a smaller header */
+        margin-bottom: 5px; /* Reduced margin to bring the following content closer */
         opacity: 1;
         z-index: 1; /* Ensures the header is above the background */
-        font-size: 1.8em; /* Larger, fancier font size */
+        font-size: 1.5em; /* Slightly smaller font size */
+      }
+      #wine-quality-form {
+        font-size: 0.8em;
       }
 
       #wine-quality-form input {
-        margin-bottom: 10px; /* Spacing below each input */
-        padding: 4px 4px; /* Reduced padding inside the input */
+        margin-bottom: 4px; /* Spacing below each input */
+        padding: 4px 2px; /* Reduced padding inside the input */
         width: 150px; /* Set a specific width for the input boxes */
         background: rgba(
           255,
@@ -62,9 +65,9 @@
           255,
           0.7
         ); /* Slightly more opaque white background */
-        border: 2px solid #8b0000; /* Wine-red border */
+        border: 1px solid #8b0000; /* Wine-red border */
         border-radius: 4px; /* Rounded corners */
-        font-size: 0.7em; /* Slightly smaller font size */
+        font-size: 0.4em; /* Slightly smaller font size */
         transition: 0.3s; /* Smooth transition for hover and focus effects */
       }
       /* Enhance the input appearance when it's focused */
@@ -81,9 +84,9 @@
       #wine-quality-form #predictButton {
         background-color: #8b0000; /* White background color */
         color: #fff; /* Wine-red text color */
-        font-size: 1.5em; /* Increase font size */
-        padding: 10px 20px; /* Top-bottom padding and left-right padding */
-        border: 3px solid #8b0000; /* Wine-red border */
+        font-size: 1.3em; /* Increase font size */
+        padding: 8px 16px; /* Top-bottom padding and left-right padding */
+        border: 1px solid #8b0000; /* Wine-red border */
         border-radius: 5px; /* Rounded corners */
         cursor: pointer; /* Hand cursor on hover */
         transition: 0.3s; /* Smooth transition for hover effect */
@@ -92,7 +95,7 @@
       #wine-quality-form #predictButton:hover {
         background-color: #450000; /* Wine-red background on hover */
         color: #fff; /* White text color on hover */
-        border: 3px solid #450000; /* Wine-red border */
+        border: 2px solid #450000; /* Wine-red border */
       }
     </style>
 </head>
