minor changes UI

--- a/prediction-ui/templates/wine.html
+++ b/prediction-ui/templates/wine.html
@@ -14,7 +14,7 @@
       }
 
       #form-container {
-        padding: 40px;
+        padding: 15px;
         border-radius: 8px;
       }
 
@@ -49,25 +49,20 @@
         margin-bottom: 5px; /* Reduced margin to bring the following content closer */
         opacity: 1;
         z-index: 1; /* Ensures the header is above the background */
-        font-size: 1.5em; /* Slightly smaller font size */
+        font-size: 1.5em; /
       }
       #wine-quality-form {
-        font-size: 0.8em;
+        font-size: 0.7em;
       }
 
       #wine-quality-form input {
-        margin-bottom: 4px; /* Spacing below each input */
-        padding: 4px 2px; /* Reduced padding inside the input */
+        margin-bottom: 3px; /* Spacing below each input */
+        padding: 4px 4px; /* Reduced padding inside the input */
         width: 150px; /* Set a specific width for the input boxes */
-        background: rgba(
-          255,
-          255,
-          255,
-          0.7
-        ); /* Slightly more opaque white background */
+        background: rgba(255,255,255,0.7); /* Slightly more opaque white background */
         border: 1px solid #8b0000; /* Wine-red border */
         border-radius: 4px; /* Rounded corners */
-        font-size: 0.4em; /* Slightly smaller font size */
+        font-size: 1em; /* Slightly smaller font size */
         transition: 0.3s; /* Smooth transition for hover and focus effects */
       }
       /* Enhance the input appearance when it's focused */
@@ -95,7 +90,7 @@
       #wine-quality-form #predictButton:hover {
         background-color: #450000; /* Wine-red background on hover */
         color: #fff; /* White text color on hover */
-        border: 2px solid #450000; /* Wine-red border */
+        border: 1px solid #450000; /* Wine-red border */
       }
     </style>
 </head>
