variable ref fix

--- a/prediction-ui/templates/response_page.html
+++ b/prediction-ui/templates/response_page.html
@@ -68,11 +68,11 @@
 
     <div id="main-container">
         <div id="predicted-score">
-            Predicted Wine Score: <span id="score-placeholder">13.37</span> 
+            Predicted Wine Score: prediction_variable  
 		
 		<div style="text-align: center;">
 			<div id="return-button">
-				<a href="wine.html"><button>Return to Main Page</button></a> 
+				<a href="input_form_page.html"><button>Return to Main Page</button></a> 
 			</div>
 		</div>
 			
