--- a/prediction-ui/templates/input_form_page.html
+++ b/prediction-ui/templates/input_form_page.html
@@ -141,7 +141,7 @@
 			
                 
             <div style="text-align: center">
-                <input type="submit" value="Predict" id="predictButton" />
+				<p><input type="submit" value="Predict" id="predictButton" /></p>
               </div>
 				
 			
