--- a/prediction-ui/templates/response_page.html
+++ b/prediction-ui/templates/response_page.html
@@ -30,7 +30,7 @@
             left: 0;
             height: 100%;
             width: 100%;
-            background-image: url('templates/wallpaper.png');
+            background-image: url('wallpaper.png');
             background-size: cover;
             opacity: 0.2;
             z-index: -1;  /* Places the background behind other elements */
