--- a/prediction-ui/templates/input_form_page.html
+++ b/prediction-ui/templates/input_form_page.html
@@ -34,7 +34,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        background-image: url("templates/wallpaper.png");
+        background-image: url("wallpaper.png");
         background-size: cover;
         opacity: 0.2;
         z-index: -1; /* Places the background behind other elements */
@@ -102,13 +102,10 @@
     </header>
 	<div id="main-container">
 		<div id="form-container">
-		<form id="wine-quality-form" action="response_page.html" method="POST">
+		<form id="wine-quality-form" action="/checkwinequality" method="POST">
 			<label for="fixed-acidity">Fixed Acidity:</label><br>
 			<input type="number" id="fixed-acidity" name="fixed-acidity" step="0.01" required><br>
-			
-			 <label for="fixed-acidity">Fixed Acidity:</label><br>
-			<input type="number" id="fixed-acidity" name="fixed-acidity" step="0.01" required><br>
-			
+
 			<label for="volatile-acidity">Volatile Acidity:</label><br>
 			<input type="number" id="volatile-acidity" name="volatile-acidity" step="0.01" required><br>
 			
@@ -141,7 +138,7 @@
 			
                 
             <div style="text-align: center">
-				<p><input type="submit" value="Predict" id="predictButton" /></p>
+				<input type="submit" value="Predict" id="predictButton" />
               </div>
 				
 			
