--- a/prediction-ui/templates/response_page.html
+++ b/prediction-ui/templates/response_page.html
@@ -68,7 +68,7 @@
 
     <div id="main-container">
         <div id="predicted-score">
-            Predicted Wine Score: prediction_variable  
+            Predicted Wine Score: <var>prediction_variable</var>
 		
 		<div style="text-align: center;">
 			<div id="return-button">
